[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-uuid",
    "with-chrono",
    "postgres-array",
] }
tokio = "1.43.0"
sqlx-postgres = "0.8.3"
actix-web = "4"
confik = "0.12.0"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
migration = { path = "./migration" }
sea-query = "0.32.2"
log = "0.4.26"
env_logger = "0.11.6"
